[gd_scene load_steps=11 format=2]

[ext_resource path="res://Scripts/Pause.gd" type="Script" id=1]
[ext_resource path="res://Art/UI/timerpelado.png" type="Texture" id=2]
[ext_resource path="res://Art/UI/PMenu.png" type="Texture" id=3]
[ext_resource path="res://Art/UI/Menu.png" type="Texture" id=4]
[ext_resource path="res://Art/UI/PSair.png" type="Texture" id=5]
[ext_resource path="res://Art/UI/Sair.png" type="Texture" id=6]
[ext_resource path="res://Art/UI/PReset.png" type="Texture" id=7]
[ext_resource path="res://Art/UI/Reset.png" type="Texture" id=8]

[sub_resource type="DynamicFontData" id=1]
font_path = "res://Util/digital-7 (mono).ttf"

[sub_resource type="DynamicFont" id=2]
size = 42
outline_size = 1
outline_color = Color( 0, 0, 0, 1 )
font_data = SubResource( 1 )

[node name="Pause" type="Control"]
pause_mode = 2
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="ColorRect" type="ColorRect" parent="."]
margin_right = 1024.0
margin_bottom = 544.0
color = Color( 0, 0, 0, 0.215686 )

[node name="timerpelado" type="TextureRect" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -103.0
margin_top = -103.0
margin_right = 103.0
margin_bottom = 103.0
texture = ExtResource( 2 )

[node name="VBoxContainer" type="VBoxContainer" parent="timerpelado"]
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_left = 36.0
margin_right = -42.0
margin_bottom = 33.0

[node name="HBoxContainer" type="HBoxContainer" parent="timerpelado/VBoxContainer"]
margin_right = 127.0
margin_bottom = 33.0

[node name="Menu" type="TextureButton" parent="timerpelado/VBoxContainer/HBoxContainer"]
margin_right = 33.0
margin_bottom = 33.0
focus_neighbour_left = NodePath("../Reset")
focus_neighbour_right = NodePath("../Sair")
focus_previous = NodePath("../Reset")
texture_normal = ExtResource( 3 )
texture_hover = ExtResource( 4 )

[node name="Sair" type="TextureButton" parent="timerpelado/VBoxContainer/HBoxContainer"]
margin_left = 37.0
margin_right = 70.0
margin_bottom = 33.0
focus_neighbour_left = NodePath("../Menu")
focus_neighbour_right = NodePath("../Reset")
focus_next = NodePath("../Reset")
focus_previous = NodePath("../Menu")
texture_normal = ExtResource( 5 )
texture_hover = ExtResource( 6 )

[node name="Reset" type="TextureButton" parent="timerpelado/VBoxContainer/HBoxContainer"]
margin_left = 74.0
margin_right = 127.0
margin_bottom = 33.0
focus_neighbour_left = NodePath("../Sair")
focus_neighbour_right = NodePath("../Menu")
focus_next = NodePath("../Menu")
size_flags_horizontal = 3
texture_normal = ExtResource( 7 )
texture_hover = ExtResource( 8 )
expand = true
stretch_mode = 3

[node name="Label" type="Label" parent="timerpelado"]
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_left = 40.0
margin_top = -43.0
margin_right = -36.0
margin_bottom = -48.0
custom_fonts/font = SubResource( 2 )
text = "00:00"
align = 1
valign = 1
[connection signal="pressed" from="timerpelado/VBoxContainer/HBoxContainer/Menu" to="." method="_on_Menu_pressed"]
[connection signal="pressed" from="timerpelado/VBoxContainer/HBoxContainer/Sair" to="." method="_on_Sair_pressed"]
[connection signal="pressed" from="timerpelado/VBoxContainer/HBoxContainer/Reset" to="." method="_on_Reset_pressed"]
